# dynamo

./: CODEOWNERS  Cargo.toml
.github/codeowners/: areas.yaml
.github/workflows/: dynamo-pipeline.yml
benchmarks/: pyproject.toml
benchmarks/burstgpt_loadgen/: README.md  convert.py
benchmarks/nat_trace/: README.md  common.py  convert.py  convert_telemetry.py
benchmarks/prefix_data_generator/: README.md  hasher.py  synthesizer.py
benchmarks/sin_load_generator/: README.md  sin_synth.py
components/src/dynamo/frontend/: frontend_args.py
components/src/dynamo/global_planner/: capacity_manager.py  kubernetes_capacity_manager.py  (+2 more)
container/: context.yaml
container/compliance/: native_packages.yaml
container/templates/: aws.Dockerfile
deploy/operator/: go.mod  go.sum
docs/integrations/: flexkv-integration.md
docs/kubernetes/: rolling-update.md
examples/global_planner/: global-planner-gpu-budget.yaml  global-planner-vllm-test.yaml
examples/global_planner/v1beta1/: global-planner-gpu-budget.yaml  global-planner-vllm-test.yaml
lib/llm/benches/: kv_router_bench.rs
lib/llm/src/: entrypoint.rs
lib/mocker/: Cargo.toml
lib/mocker/servers/vllm/: Cargo.toml  README.md
lib/mocker/servers/vllm/src/: lib.rs  main.rs  server.rs  server_request.rs  server_tests.rs
lib/mocker/servers/vllm/tests/: sidecar.rs
lib/runtime/: Cargo.toml
lib/runtime/src/: pipeline.rs  system_status_server.rs
lib/sidecar/vllm/: Cargo.toml  README.md
recipes/gpt-oss-120b/: README.md
recipes/gpt-oss-120b/perf/: README.md  perf.yaml
tests/utils/: multimodal.py
(+77 files in other folders)
